# i8t

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
.github/workflows/: main.yml
docs/: conf.py
requirements/: base.in  base.txt  ci.in  ci.txt  local.in  local.txt  toy.in  toy.txt
src/i8t/: __init__.py  cli.py  client.py  collect.py  inmemory_storage.py  relay_storage.py  storage.py  test_client.py  test_collect.py  test_inmemory_storage.py
src/i8t/adapters/decorator_adapter/: exporter.py  loader.py  serde.py
src/i8t/adapters/flask_adapter/: exporter.py  loader.py
src/i8t/adapters/requests_adapter/: exporter.py  loader.py
src/i8t/instrument/: decorator_introspect.py  flask_introspect.py  flask_introspection.py  requests_introspect.py  requests_introspection.py  test_decorator_introspect.py  test_flask_introspect.py  test_flask_introspection.py  test_requests_introspect.py  test_requests_introspection.py
src/i8t/testdata/: raw-session.json  session.jsonl
src/i8t/testing/: loader.py  session.py  time_range.py
toy/: Dockerfile  app.py  scrape-all.sh  scrape.sh  test_app.py  test_collect.py
toy/testdata/: session-01-py3.10.jsonl  session-01-py3.11.jsonl  session-01-py3.12.jsonl  session-01-py3.8.jsonl  session-01-py3.9.jsonl  session-01-py310.jsonl  session-01-py312.jsonl  session-01-py38.jsonl  session-01.jsonl  session-02.jsonl  session-04.jsonl
