[metadata]
name = i8t
version = 0.0.6
author = Peter Demin
author_email = peterdemin@gmail.com
description = 
long_description = file:README.rst
url = https://github.com/peterdemin/i8t
classifiers =
    Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    requests
    dill

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    i8t = i8t.cli:cli

[bdist_wheel]
universal = 1
